Issue #5 support and warnings resolved in Java 21